# redunisol-kestra

./: .gitignore  README.md
.github/: CODEOWNERS
.github/workflows/: deploy-dev.yml  deploy-herramientas-dev.yml  deploy-herramientas-prod.yml  deploy-infra.yml  deploy-prod.yml  deploy-redunisol-web-dev.yml  deploy-redunisol-web-prod.yml  publish-analisis-credito-consulta-cuad-image.yml  validate-metamap-server.yml  validate.yml
apps/coinag-balance-guard/: .env.example  README.md  pyproject.toml
apps/coinag-balance-guard/cron/: coinag-balance-guard.cron
apps/coinag-balance-guard/docs/: OPERATIONS.md
apps/coinag-balance-guard/systemd/: coinag-balance-guard.service  coinag-balance-guard.timer
apps/credixsa-cache-api/: Dockerfile  README.md
apps/exportador-bancor/: .gitignore  README.md  arc_export_gui.py  build-package.ps1  example-input.xlsx  generate_arc_export.py  pyproject.toml
apps/exportador-bancor/docs/api/: API_Usage_Guide.md  BOModel_API_Reference.md  swagger.json
apps/exportador-bancor/packaging/pyinstaller/: exportador-bancor.spec
apps/exportador-bancor/src/exportador_bancor/: __init__.py  cli.py  core.py  gui.py
apps/exportador-bancor/tests/: test_core.py
apps/metamap-platform/client/validacion-metamap/: .gitignore  Cargo.toml  README.md  build-package.ps1  validacion-metamap.env.example
apps/metamap-platform/client/validacion-metamap/src/: app.rs  config.rs  core_client.rs  lib.rs  logging.rs  main.rs  media_downloader.rs  models.rs  notifications.rs  server_client.rs
docs/: architecture.md  ci-cd.md  kestra-configuration.md  migration-notes.md
kestra/tools/: deploy_kestra.py  manage_encrypted_env.py
platform/infra/: .env.example  docker-compose.yml  kestra-runtime.env.enc
tools/: deploy_kestra.py  requirements.txt  validate_kestra.py
web/herramientas/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json
web/redunisol-web/: .env.example  package-lock.json  package.json  slugs.txt
(+171 files in other folders)
