[package]
name = "validacion-metamap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.42", features = ["clock"] }
eframe = "0.33.0"
egui = "0.33.0"
env_logger = "0.11.8"
log = "0.4.28"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
