[package]
name = "validacion-metamap"
version = "1.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.42", features = ["clock"] }
eframe = "0.33.0"
egui = "0.33.0"
env_logger = "0.11.8"
log = "0.4.28"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
